--- a/apiendpoint.html
+++ b/apiendpoint.html
@@ -12,9 +12,19 @@
     <div id="rooms-container"></div>
 </body>
 <script>
-    let getRooms = async () => {
+    let roomsConainer = document.getElementById('rooms-container')
+        let getRooms = async () => {
         let response = await fetch('http://127.0.0.1:8000/api/rooms/')
-        console.log('RESPONSE:', response)
+        let rooms = await response.json()
+        
+        for (let i = 0; rooms.length > i; i++) {
+            let room = rooms[i]
+            let row = `<div>
+                        <h3>${room.name}</h3>
+                        </div>`
+            roomsConainer.innerHTML += row
+
+        }
     }
     getRooms()
 </script>
